[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/pauseEN.gd" type="Script" id=1]
[ext_resource path="res://Capa 2.png" type="Texture" id=2]
[ext_resource path="res://Sounds/hoverButon.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/PressButon.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/UI/OptionsPauseMenu.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/InventoryPauseMenu.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/MapPauseMenu.png" type="Texture" id=7]
[ext_resource path="res://Resources/Themes/NpcText.tres" type="Theme" id=8]
[ext_resource path="res://Resources/Themes/MainMenuTheme.tres" type="Theme" id=9]
[ext_resource path="res://Assets/controls/ARROWRIGHT.png" type="Texture" id=10]
[ext_resource path="res://Assets/controls/E.png" type="Texture" id=11]
[ext_resource path="res://Assets/controls/SHIFT.png" type="Texture" id=12]
[ext_resource path="res://Assets/controls/A.png" type="Texture" id=13]
[ext_resource path="res://Assets/controls/D.png" type="Texture" id=14]
[ext_resource path="res://Assets/controls/ESC.png" type="Texture" id=15]
[ext_resource path="res://Assets/controls/CTRL.png" type="Texture" id=16]
[ext_resource path="res://Assets/controls/SPACE.png" type="Texture" id=17]
[ext_resource path="res://Assets/UI/ControlsPanel.png" type="Texture" id=18]
[ext_resource path="res://Assets/controls/ARROWUP.png" type="Texture" id=19]
[ext_resource path="res://Assets/controls/MOUSEBUTTONLEFT.png" type="Texture" id=20]
[ext_resource path="res://Assets/controls/ARROWLEFT.png" type="Texture" id=21]
[ext_resource path="res://Assets/UI/InventorySelected.png" type="Texture" id=22]
[ext_resource path="res://Assets/UI/InventoryUnselected.png" type="Texture" id=23]
[ext_resource path="res://Assets/controls/Q.png" type="Texture" id=24]
[ext_resource path="res://Assets/icons 16x16/book_06c.png" type="Texture" id=25]
[ext_resource path="res://Assets/icons 16x16/necklace_02d.png" type="Texture" id=26]
[ext_resource path="res://Assets/icons 16x16/Item__06.png" type="Texture" id=27]
[ext_resource path="res://Assets/icons 16x16/book_06d.png" type="Texture" id=28]

[sub_resource type="StyleBoxTexture" id=386]
texture = ExtResource( 23 )
region_rect = Rect2( 0.179115, 0.47298, 47.8041, 44.4578 )

[sub_resource type="StyleBoxTexture" id=387]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 48, 45 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
script = ExtResource( 1 )

[node name="Capa2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.768627 )
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="Panel2" type="Panel" parent="."]
modulate = Color( 0.243137, 0, 0.278431, 0.878431 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GamePaused" type="RichTextLabel" parent="."]
margin_left = 1103.0
margin_top = 95.0
margin_right = 1575.0
margin_bottom = 187.0
theme = ExtResource( 8 )
custom_colors/default_color = Color( 0.929412, 0.654902, 0, 1 )
custom_colors/selection_color = Color( 0.929412, 0.654902, 0, 1 )
custom_colors/font_color_selected = Color( 0.929412, 0.654902, 0, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.654902, 0, 1 )
text = "Game Paused"

[node name="Q" type="Sprite" parent="."]
position = Vector2( 382, 115 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 24 )

[node name="E" type="Sprite" parent="."]
position = Vector2( 1048, 115 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 11 )

[node name="buttonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -13.152
pitch_scale = 0.45

[node name="InventorybuttonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.0
pitch_scale = 1.19

[node name="buttonHovered" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.0
pitch_scale = 0.35

[node name="Options" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -939.0
margin_top = -862.0
margin_right = -412.0
margin_bottom = -402.0
rect_scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 5 )

[node name="ButtonsContainer" type="VBoxContainer" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -523.5
margin_top = -480.0
margin_right = 657.5
margin_bottom = 190.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 550, 590 )
custom_constants/separation = 53

[node name="ButtonContinueGame" type="Button" parent="Options/ButtonsContainer"]
margin_right = 1181.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 550, 94 )
text = "CONTINUE   "
icon_align = 1

[node name="ButtonControls" type="Button" parent="Options/ButtonsContainer"]
margin_top = 241.0
margin_right = 1181.0
margin_bottom = 429.0
rect_pivot_offset = Vector2( 550, 95 )
text = "CONTROLS   "

[node name="ButtonQuitGame" type="Button" parent="Options/ButtonsContainer"]
margin_top = 482.0
margin_right = 1181.0
margin_bottom = 670.0
rect_pivot_offset = Vector2( 550, 94 )
text = "QUIT GAME   "

[node name="ControlsPanel" type="TextureRect" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.8125
margin_top = -78.4375
margin_right = 546.188
margin_bottom = 821.563
rect_scale = Vector2( 0.27, 0.275 )
texture = ExtResource( 18 )
stretch_mode = 1

[node name="ControlsLabelsContainer" type="VBoxContainer" parent="Options/ControlsPanel"]
margin_left = 120.0
margin_top = 55.0
margin_right = 539.0
margin_bottom = 1273.0
rect_scale = Vector2( 0.6, 0.6 )
custom_constants/separation = 68

[node name="JumpLabel" type="Label" parent="Options/ControlsPanel/ControlsLabelsContainer"]
margin_right = 419.0
margin_bottom = 80.0
text = "Jump -"

[node name="Space" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/JumpLabel"]
margin_left = 471.627
margin_top = 20.0
margin_right = 503.627
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 17 )

[node name="ArrowUp" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/JumpLabel"]
margin_left = 371.627
margin_top = 20.0
margin_right = 387.627
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 19 )

[node name="MoveLeftLabel" type="Label" parent="Options/ControlsPanel/ControlsLabelsContainer"]
margin_top = 148.0
margin_right = 419.0
margin_bottom = 228.0
text = "Move left -"

[node name="A" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/MoveLeftLabel"]
margin_left = 530.0
margin_top = 20.0
margin_right = 546.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 13 )

[node name="ArrowLeft" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/MoveLeftLabel"]
margin_left = 430.0
margin_top = 20.0
margin_right = 446.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 21 )

[node name="MoveRightLabel" type="Label" parent="Options/ControlsPanel/ControlsLabelsContainer"]
margin_top = 296.0
margin_right = 419.0
margin_bottom = 376.0
text = "Move right -"

[node name="ArrowRight" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/MoveRightLabel"]
margin_left = 430.0
margin_top = 20.0
margin_right = 446.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="D" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/MoveRightLabel"]
margin_left = 530.0
margin_top = 20.0
margin_right = 546.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 14 )

[node name="InteractLabel" type="Label" parent="Options/ControlsPanel/ControlsLabelsContainer"]
margin_top = 444.0
margin_right = 419.0
margin_bottom = 524.0
text = "Interact -"

[node name="E" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/InteractLabel"]
margin_left = 530.0
margin_top = 20.0
margin_right = 546.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 11 )

[node name="AttackLabel" type="Label" parent="Options/ControlsPanel/ControlsLabelsContainer"]
margin_top = 592.0
margin_right = 419.0
margin_bottom = 672.0
text = "Attack -"

[node name="LeftClick" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/AttackLabel"]
margin_left = 510.0
margin_top = -15.0
margin_right = 531.0
margin_bottom = 7.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 20 )

[node name="PauseMenuLabel" type="Label" parent="Options/ControlsPanel/ControlsLabelsContainer"]
margin_top = 740.0
margin_right = 419.0
margin_bottom = 820.0
text = "Map -"

[node name="ESC" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/PauseMenuLabel"]
margin_left = 530.0
margin_top = 20.0
margin_right = 546.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 15 )

[node name="CrouchLabel" type="Label" parent="Options/ControlsPanel/ControlsLabelsContainer"]
margin_top = 888.0
margin_right = 419.0
margin_bottom = 968.0
text = "Crouch -"

[node name="CTRL" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/CrouchLabel"]
margin_left = 475.0
margin_top = 20.0
margin_right = 507.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 16 )

[node name="DashLabel" type="Label" parent="Options/ControlsPanel/ControlsLabelsContainer"]
margin_top = 1036.0
margin_right = 419.0
margin_bottom = 1116.0
rect_pivot_offset = Vector2( -610.261, -275.968 )
text = "Dash -"

[node name="SHIFT" type="TextureRect" parent="Options/ControlsPanel/ControlsLabelsContainer/DashLabel"]
margin_left = 470.0
margin_top = 20.0
margin_right = 502.0
margin_bottom = 36.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 12 )

[node name="ButtonBackControls" type="Button" parent="Options/ControlsPanel"]
margin_left = -240.0
margin_top = 705.0
margin_right = 810.0
margin_bottom = 893.0
rect_scale = Vector2( 0.32, 0.32 )
rect_pivot_offset = Vector2( 550, 94 )
text = "BACK TO MENU"

[node name="Inventory" type="TextureRect" parent="."]
margin_left = 21.0
margin_top = -322.0
margin_right = 548.0
margin_bottom = 138.0
rect_scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 6 )

[node name="Obj1" type="Button" parent="Inventory"]
margin_left = 150.0
margin_top = 289.0
margin_right = 214.0
margin_bottom = 353.0
rect_scale = Vector2( 0.65, 0.65 )
custom_styles/hover = SubResource( 386 )
custom_styles/pressed = SubResource( 386 )
custom_styles/focus = SubResource( 387 )
custom_styles/disabled = SubResource( 386 )
custom_styles/normal = SubResource( 386 )

[node name="Bible1" type="Sprite" parent="Inventory/Obj1"]
visible = false
position = Vector2( 31.25, 33.75 )
scale = Vector2( 2, 2 )
texture = ExtResource( 28 )

[node name="Bible1Desc" type="RichTextLabel" parent="Inventory/Obj1"]
visible = false
margin_left = 13.0
margin_top = -130.0
margin_right = 1912.0
margin_bottom = 290.0
rect_scale = Vector2( 0.22, 0.22 )
theme = ExtResource( 8 )
text = "Second and final part of a series of magical bibles. Legend has it that the bearer of these can perform a second jump in the air. The last time they were seen, was in the depths of the sea."

[node name="Obj2" type="Button" parent="Inventory"]
margin_left = 158.0
margin_top = 334.0
margin_right = 222.0
margin_bottom = 398.0
rect_scale = Vector2( 0.65, 0.65 )
custom_styles/hover = SubResource( 386 )
custom_styles/pressed = SubResource( 386 )
custom_styles/focus = SubResource( 387 )
custom_styles/disabled = SubResource( 386 )
custom_styles/normal = SubResource( 386 )

[node name="Bible2" type="Sprite" parent="Inventory/Obj2"]
visible = false
position = Vector2( 31.4423, 33.75 )
scale = Vector2( 2, 2 )
texture = ExtResource( 25 )

[node name="Bible2Desc" type="RichTextLabel" parent="Inventory/Obj2"]
visible = false
margin_top = -199.0
margin_right = 1901.0
margin_bottom = 188.0
rect_scale = Vector2( 0.22, 0.22 )
theme = ExtResource( 8 )
text = "First part of a series of magical bibles. Legend has it that the bearer of these can perform a second jump in the air. The last time they were seen, was in the depths of the sea."

[node name="Obj3" type="Button" parent="Inventory"]
margin_left = 223.0
margin_top = 296.0
margin_right = 287.0
margin_bottom = 360.0
rect_scale = Vector2( 0.65, 0.65 )
custom_styles/hover = SubResource( 386 )
custom_styles/pressed = SubResource( 386 )
custom_styles/focus = SubResource( 387 )
custom_styles/disabled = SubResource( 386 )
custom_styles/normal = SubResource( 386 )

[node name="Sword" type="Sprite" parent="Inventory/Obj3"]
visible = false
position = Vector2( 32.4038, 34.5192 )
scale = Vector2( 1.9, 1.9 )
texture = ExtResource( 27 )

[node name="SwordDesc" type="RichTextLabel" parent="Inventory/Obj3"]
visible = false
margin_left = -97.0
margin_top = -140.0
margin_right = 1817.0
margin_bottom = 317.0
rect_scale = Vector2( 0.22, 0.22 )
theme = ExtResource( 8 )
text = "Sword stolen from the current King Roderick of Midland. With this sword, you will be able to execute faster thrusts without sacrificing its lethality."

[node name="Obj4" type="Button" parent="Inventory"]
margin_left = 231.0
margin_top = 341.0
margin_right = 295.0
margin_bottom = 405.0
rect_scale = Vector2( 0.65, 0.65 )
custom_styles/hover = SubResource( 386 )
custom_styles/pressed = SubResource( 386 )
custom_styles/focus = SubResource( 387 )
custom_styles/disabled = SubResource( 386 )
custom_styles/normal = SubResource( 386 )

[node name="Necklace" type="Sprite" parent="Inventory/Obj4"]
visible = false
position = Vector2( 31.6346, 33.0769 )
scale = Vector2( 2, 2 )
texture = ExtResource( 26 )

[node name="NeclaceDesc" type="RichTextLabel" parent="Inventory/Obj4"]
visible = false
margin_left = -112.0
margin_top = -210.0
margin_right = 1785.0
margin_bottom = 212.0
rect_scale = Vector2( 0.22, 0.22 )
theme = ExtResource( 8 )
text = "Ancient necklace of a famous wizard from the Middle Ages. Its bearer will gain the power to move quickly for short periods of time."

[node name="Obj5" type="Button" parent="Inventory"]
margin_left = 316.0
margin_top = 296.0
margin_right = 380.0
margin_bottom = 360.0
rect_scale = Vector2( 0.65, 0.65 )
custom_styles/hover = SubResource( 386 )
custom_styles/pressed = SubResource( 386 )
custom_styles/focus = SubResource( 387 )
custom_styles/disabled = SubResource( 386 )
custom_styles/normal = SubResource( 386 )

[node name="Obj6" type="Button" parent="Inventory"]
margin_left = 308.0
margin_top = 341.0
margin_right = 372.0
margin_bottom = 405.0
rect_scale = Vector2( 0.65, 0.65 )
custom_styles/hover = SubResource( 386 )
custom_styles/pressed = SubResource( 386 )
custom_styles/focus = SubResource( 387 )
custom_styles/disabled = SubResource( 386 )
custom_styles/normal = SubResource( 386 )

[node name="Obj7" type="Button" parent="Inventory"]
margin_left = 388.0
margin_top = 289.0
margin_right = 452.0
margin_bottom = 353.0
rect_scale = Vector2( 0.65, 0.65 )
custom_styles/hover = SubResource( 386 )
custom_styles/pressed = SubResource( 386 )
custom_styles/focus = SubResource( 387 )
custom_styles/disabled = SubResource( 386 )
custom_styles/normal = SubResource( 386 )

[node name="Obj8" type="Button" parent="Inventory"]
margin_left = 380.0
margin_top = 334.0
margin_right = 444.0
margin_bottom = 398.0
rect_scale = Vector2( 0.65, 0.65 )
custom_styles/hover = SubResource( 386 )
custom_styles/pressed = SubResource( 386 )
custom_styles/focus = SubResource( 387 )
custom_styles/disabled = SubResource( 386 )
custom_styles/normal = SubResource( 386 )

[node name="Map" type="TextureRect" parent="."]
visible = false
margin_left = 21.0
margin_top = -322.0
margin_right = 548.0
margin_bottom = 138.0
rect_scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 7 )

[node name="ComingSoon" type="RichTextLabel" parent="Map"]
margin_left = 104.062
margin_top = 221.875
margin_right = 875.063
margin_bottom = 423.875
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 8 )
custom_colors/default_color = Color( 0.929412, 0.654902, 0, 1 )
custom_colors/selection_color = Color( 0.929412, 0.654902, 0, 1 )
custom_colors/font_color_selected = Color( 0.929412, 0.654902, 0, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.654902, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]MAP
COMING SOON...[/center]"
text = "MAP
COMING SOON..."

[connection signal="button_down" from="Options/ButtonsContainer/ButtonContinueGame" to="." method="_on_ButtonContinueGame_button_down"]
[connection signal="mouse_entered" from="Options/ButtonsContainer/ButtonContinueGame" to="." method="_on_ButtonContinueGame_mouse_entered"]
[connection signal="mouse_exited" from="Options/ButtonsContainer/ButtonContinueGame" to="." method="_on_ButtonContinueGame_mouse_exited"]
[connection signal="button_down" from="Options/ButtonsContainer/ButtonControls" to="." method="_on_ButtonControls_button_down"]
[connection signal="mouse_entered" from="Options/ButtonsContainer/ButtonControls" to="." method="_on_ButtonControls_mouse_entered"]
[connection signal="mouse_exited" from="Options/ButtonsContainer/ButtonControls" to="." method="_on_ButtonControls_mouse_exited"]
[connection signal="button_down" from="Options/ButtonsContainer/ButtonQuitGame" to="." method="_on_ButtonQuitGame_button_down"]
[connection signal="mouse_entered" from="Options/ButtonsContainer/ButtonQuitGame" to="." method="_on_ButtonQuitGame_mouse_entered"]
[connection signal="mouse_exited" from="Options/ButtonsContainer/ButtonQuitGame" to="." method="_on_ButtonQuitGame_mouse_exited"]
[connection signal="button_down" from="Options/ControlsPanel/ButtonBackControls" to="." method="_on_ButtonBackControls_button_down"]
[connection signal="mouse_entered" from="Options/ControlsPanel/ButtonBackControls" to="." method="_on_ButtonBackControls_mouse_entered"]
[connection signal="mouse_exited" from="Options/ControlsPanel/ButtonBackControls" to="." method="_on_ButtonBackControls_mouse_exited"]
[connection signal="focus_entered" from="Inventory/Obj1" to="." method="_on_Obj1_focus_entered"]
[connection signal="focus_exited" from="Inventory/Obj1" to="." method="_on_Obj1_focus_exited"]
[connection signal="focus_entered" from="Inventory/Obj2" to="." method="_on_Obj2_focus_entered"]
[connection signal="focus_exited" from="Inventory/Obj2" to="." method="_on_Obj2_focus_exited"]
[connection signal="focus_entered" from="Inventory/Obj3" to="." method="_on_Obj3_focus_entered"]
[connection signal="focus_exited" from="Inventory/Obj3" to="." method="_on_Obj3_focus_exited"]
[connection signal="focus_entered" from="Inventory/Obj4" to="." method="_on_Obj4_focus_entered"]
[connection signal="focus_exited" from="Inventory/Obj4" to="." method="_on_Obj4_focus_exited"]
[connection signal="focus_entered" from="Inventory/Obj5" to="." method="_on_Obj5_focus_entered"]
[connection signal="focus_exited" from="Inventory/Obj5" to="." method="_on_Obj5_focus_exited"]
[connection signal="focus_entered" from="Inventory/Obj6" to="." method="_on_Obj6_focus_entered"]
[connection signal="focus_exited" from="Inventory/Obj6" to="." method="_on_Obj6_focus_exited"]
[connection signal="focus_entered" from="Inventory/Obj7" to="." method="_on_Obj7_focus_entered"]
[connection signal="focus_exited" from="Inventory/Obj7" to="." method="_on_Obj7_focus_exited"]
[connection signal="focus_entered" from="Inventory/Obj8" to="." method="_on_Obj8_focus_entered"]
[connection signal="focus_exited" from="Inventory/Obj8" to="." method="_on_Obj8_focus_exited"]
